server/deploy/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: your-project-prod
  labels:
    app.kubernetes.io/part-of: your-project
    environment: prod
